--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -1,13 +1,26 @@
-body {
+:root {
+  /* Global variables to be defind here  */
+  --color-primary: #34c94b;
+  --color-black: #121212;
+  --color-white: #ffffff;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+  height: 100%;
+}
+body {
+  font-family: 'poppins', sans-serif;
+  line-height: 1.5;
+  background-color: #121212;
+  color: #ffffff;
+  overflow-x: hidden;
 }
